# leadlag-lab

./: .gitignore  00_DOCS_PIPELINE.md  02_FULL_REWORK_PLAN_TO_10.md  03_NEXT_ITERATION_REVIEW_TO_10.md  04_DEEP_AUDIT_REPORT.md  05_PRE_FLUTTER_STABILIZATION_PLAN.md  06_FLUTTER_UI_REWORK_PLAN.md  07_AUDIT.md  07_BACKEND_AUDIT.md  08_PHILOSOPHY_PIPELINE.md  09_MANUAL_TEST_REPORT_2026-04-18.md  10_PROMPT_CONTEXT.md  11_SIGNAL_ARCHITECTURE_DISCUSSION.md  12_ARCHITECTURE_V5_FINAL.md  13_ARCHITECTURE_DECISIONS.md  14_PHASE2_TREE_SIDEBAR.md  15_PIPELINE_AUDIT.md  16_DOMAIN_MODEL.md  16_IMPLEMENTATION_PLAN.md  17_MENU_CONTROLS_BLUEPRINT.md  18_DESIGN_SYSTEM.md  19_FRAME.md  20_WIREFRAMES.md  21_NEXT_CHAT_GUIDE.md  22_SESSION.md  92_NEW_AGENT_PROMPT.md  AGENTS.md  CRITIQUE.md  DESIGN.md  FULL_REWORK_PLAN_TO_10.md  NEW_AGENT_PROMPT.md  NEXT_ITERATION_REVIEW_TO_10.md  PHILOSOPHY_PIPELINE_MANUAL_TESTING.md  PRODUCT.md  PROGRESS.md  PROGRESS_PHASE2.md  PROMPT_CONTEXT.md  README.md  REVIEW_PHASE2.md  STRATEGY_DEVELOPMENT.md  (+6 more)
config/: jupyter.env  jupyter.env.example  venues.yaml
deploy/: leadlag-lab-jupyter.service  leadlag-lab.service  leadlag-monitor.service  nginx-leadlag-lab-jupyter.conf  nginx-leadlag-lab.conf
leadlag/: __init__.py  collections.py  contracts.py  montecarlo.py  session.py  strategy.py  strategy_loader.py
notebooks/: codex_manual_strategy_20260418.ipynb  explore.ipynb  strategy_dev-Copy1.ipynb  strategy_dev.ipynb
scripts/: setup_jupyter.sh  smoke_jupyter.sh
tests/: test_phase_a.py  test_phase_b_ui_contract.py  test_phase_c_ui_contract.py  (+4 more)
(+77 files in other folders)
